Versión 4.7 · 2025-09-12 21:30 · Botón Usuario completo (persistencia y UI sin overflow) + Splash muestra nombre animado y navegación a Home · Punto: Tema 4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
 
+  # === NUEVO: necesarias para Usuario + Splash ===
+  image_picker: ^1.1.2          # seleccionar foto (cámara/galería)
+  shared_preferences: ^2.2.3     # guardar nombre/correo/teléfono
+  path_provider: ^2.1.4          # guardar imagen en documentos de la app
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
