--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,22 @@
 name: kavid
 description: "proyecto base KAVID"
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
 
-  # === NUEVO: necesarias para Usuario + Splash ===
+  # === Usuario + Splash + Vista General ===
   image_picker: ^1.1.2          # seleccionar foto (cámara/galería)
   shared_preferences: ^2.2.3     # guardar nombre/correo/teléfono
   path_provider: ^2.1.4          # guardar imagen en documentos de la app
+  intl: ^0.19.0                  # fechas y formatos en español (Vista General)
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +26,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # (Opcional pero recomendado) habilita carpeta general de recursos
+  assets:
+    - assets/
 
 flutter_launcher_icons:
   android: true
