Versión 6.6 · 2025-09-27 16:30 · Cierre completo módulo Gastos Diarios (OCR + diseño) · Punto: Tema 5D

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kavid.kavid">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera.any" android:required="false" />
+
     <application
         android:label="kavid"
-        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
         <activity
@@ -28,6 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+    </application>
 </manifest>
