--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.9.2 <4.0.0"
+  sdk: "^3.9.0"
 
 dependencies:
   flutter:
@@ -13,17 +13,23 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   # === Usuario + Splash + Vista General ===
-  image_picker: ^1.1.2           # seleccionar foto (cámara/galería)
-  shared_preferences: ^2.2.3     # guardar nombre/correo/teléfono
-  path_provider: ^2.1.4          # guardar imagen en documentos de la app
-  intl: ^0.19.0                  # fechas y formatos en español (Vista General + Gastos)
+  image_picker: ^1.1.2
+  shared_preferences: ^2.2.3
+  path_provider: ^2.1.4
+  intl: ^0.19.0
 
   # === Gastos diarios (Tema 6) ===
-  google_mlkit_text_recognition: ^0.14.0  # OCR para tickets
-  uuid: ^4.4.2                            # generar IDs únicas para los gastos
+  google_mlkit_text_recognition: ^0.14.0
+  uuid: ^4.4.2
 
-  # === Calendario (Tema 6) ===
-  table_calendar: ^3.0.9        # mostrar calendario personalizado
+  # === OCR robusta + preprocesado + cámara propia ===
+  flutter_exif_rotation: ^0.5.2
+  image: ^4.2.0
+  camera: ^0.11.0+2
+  permission_handler: ^11.3.1
+
+  # === Calendario ===
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
@@ -35,7 +41,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+    - assets/icons/app_icon.png
 
 flutter_launcher_icons:
   android: true
