--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   path_provider: ^2.1.4
   intl: ^0.19.0
 
-  # === Gastos diarios (Tema 6) ===
+  # === Gastos diarios (OCR) ===
   google_mlkit_text_recognition: ^0.14.0
   uuid: ^4.4.2
 
@@ -30,6 +30,10 @@ dependencies:
 
   # === Calendario ===
   table_calendar: ^3.0.9
+
+  # === Recordatorios (notificaciones locales + timezone) ===
+  flutter_local_notifications: ^17.2.1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
